worked on responsive design

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
     <!-- start of middle section -->
     <div id="middle">
-      <div class="row mb-5 pb-5">
-        <div class="col-10 offset-1 col-lg-4 offset-lg-2 mb-5">
+      <div class="row mb-5 pb-5 first">
+        <div class="col-10 offset-1 col-lg-4 offset-lg-2 mb-5 firstP">
           <h3>
             We’re experts with <b>modern marketing tools,</b> so you don’t have
             to be!
           </h3>
-          <p>
+          <p class="yo">
             With hands-on experience in B2B’s most innovative apps and tools, we
             take a data-driven approach to continually improve prospect
             engagement. Whether we work directly out of your platform or provide
@@ -73,7 +73,7 @@
           />
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 second">
         <div
           id="team-img-container"
           class="col-10 offset-1 col-lg-4 offset-lg-2 mb-5 d-flex align-items-center"
@@ -86,13 +86,15 @@
         </div>
 
         <div class="col-10 offset-2 col-lg-4 offset-lg-2 px-5 mx-5 mt-5">
-          <h3><b>The best way</b> to build a marketing team</h3>
-          <p>
+          <h3 class="marketing-p">
+            <b>The best way</b> to build a marketing team
+          </h3>
+          <p class="first-p">
             With EBQ, you’re not just hiring a marketing specialist. You’re
             getting an entire marketing department at a fraction of the cost and
             effort of hiring internally.
           </p>
-          <p>
+          <p class="second-p">
             For each project, we provide: a Success Manager to drive high-level
             strategy, a Project Manager to oversee day-to-day operations, and
             one or more Specialists working diligently to amplify your brand.
